[package]
name = "l2"
version = "0.1.0"
authors = ["Bilal Khan <bkkaggle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
blas = "0.20.0"
blas-src = { version = "0.6", features = ["accelerate"] }